--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,15 +9,31 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
+// $menuText:#bfcbd9;
+// $menuActiveText:#409EFF;
+// $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuText:#333333;
+$menuActiveText:#1890FF;
+$subMenuActiveText:#1890FF;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+// $menuBg:#304156;
+
+// $menuHover:#263445;
+
+// $subMenuBg:#1f2d3d;
+// $subMenuHover:#001528;
+
+$menuBg:#fffff;
+$menuHover:#409EFF;
+$subMenuBg:#E6F7FF;
+$subMenuHover:#409EFF;
+
+// $menuBg:#30419B; // 菜单整体背景
+// $menuHover: #3F4FA2; // 菜单悬浮变色
+// $subMenuBg:#30419B; // 子菜单背景
+// $subMenuHover:#3F4FA2; // 子菜单悬浮背景
+
 
 $sideBarWidth: 210px;
 
