--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,7 +24,8 @@ $subMenuActiveText:#1890FF;
 // $subMenuBg:#1f2d3d;
 // $subMenuHover:#001528;
 
-$menuBg:#fffff;
+// $menuBg:#e6f7ff;
+$menuBg:#fff;
 $menuHover:#409EFF;
 $subMenuBg:#E6F7FF;
 $subMenuHover:#409EFF;
