--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -10,7 +10,8 @@
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
-    // background-color: $menuBg;
+    background-color: $menuBg;
+    // background: #e6f7ff;
     height: 100%;
     position: fixed;
     font-size: 0px;
@@ -19,6 +20,7 @@
     left: 0;
     z-index: 1001;
     overflow: hidden;
+
 
     // reset element-ui css
     .horizontal-collapse-transition {
@@ -71,9 +73,15 @@
     // menu hover
     .submenu-title-noDropdown,
     .el-submenu__title {
+      // margin: 0px 10px;
       &:hover {
-        background-color: $menuHover !important;
+        // background-color: $menuHover !important;
       }
+    }
+
+    .is-active{
+      color: $menuActiveText !important;
+      // background-color: $subMenuBg !important;
     }
 
     .is-active>.el-submenu__title {
@@ -83,17 +91,32 @@
     & .nest-menu .el-submenu>.el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
-      background-color: $subMenuBg !important;
 
       &:hover {
-        background-color: $subMenuHover !important;
+        // background-color: $subMenuHover !important;
       }
+    }
+    & .el-menu-item{
+      margin: 0px 10px;
+    }
+    & .el-submenu {
+      padding: 0px 10px;
+       & .el-menu-item{
+         margin:0;
+       }
+      // background-color:$menuBg;
     }
   }
 
   .hideSidebar {
     .sidebar-container {
       width: 54px !important;
+      & .el-menu-item{
+        margin: 0px;
+      }
+      & .el-submenu {
+        padding: 0px;
+      }
     }
 
     .main-container {
@@ -201,7 +224,7 @@
   .el-menu-item {
     &:hover {
       // you can use $subMenuHover
-      background-color: $menuHover !important;
+      // background-color: $menuHover !important;
     }
   }
 
@@ -211,7 +234,7 @@
     overflow-y: auto;
 
     &::-webkit-scrollbar-track-piece {
-      background: #d3dce6;
+      // background: #d3dce6;
     }
 
     &::-webkit-scrollbar {
