--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -200,3 +200,41 @@ li {
 li {
   list-style: none;
 }
+ //复合型输入框 当输入框选中时,显示前面下拉框边框样式
+.search-select-input:has(>.el-input__inner:focus){
+  .el-input-group__prepend{
+    border-color: #1890FF;
+  }
+}
+.search-select-input{
+  .el-input__inner {
+    border-left: none;
+  }
+  .el-input-group__append .el-button{
+    font-size: 20px !important;
+  }
+}
+//弹框
+.el-dialog-box {
+  font-size: 14px;
+  .dialog-notes {
+    display: inline-block;
+    font-size: 12px;
+    color: #999;
+  }
+  .el-dialog-deliver {
+    .el-form-item {
+      margin-top: 20px;
+    }
+  }
+  .el-button--medium{
+    font-size: 12px;
+  }
+}
+
+.el-dialog__header {
+  font-size: 14px;
+  font-family: Microsoft YaHei-Regular, Microsoft YaHei;
+  font-weight: 400;
+  color: #333333;
+}
