--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -26,9 +26,9 @@ $subMenuActiveText:#1890FF;
 
 // $menuBg:#e6f7ff;
 $menuBg:#fff;
-$menuHover:#409EFF;
+$menuHover:#E6F7FF;
 $subMenuBg:#E6F7FF;
-$subMenuHover:#409EFF;
+$subMenuHover:#E6F7FF;
 
 // $menuBg:#30419B; // 菜单整体背景
 // $menuHover: #3F4FA2; // 菜单悬浮变色
@@ -37,6 +37,7 @@ $subMenuHover:#409EFF;
 
 
 $sideBarWidth: 210px;
+$sideBarItemWidth: 190px;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
