--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,7 @@ html {
 }
 
 #app {
+  min-width: 750px;
   height: 100%;
 }
 
@@ -200,6 +201,82 @@ li {
 li {
   list-style: none;
 }
+//修改element ui 中按钮样式
+.public-el-btn{
+  // width: 88px;
+  height: 34px;
+  border-radius: 4px;
+  border: none;
+  margin: 20px 20px 20px 15px;
+  box-sizing: border-box;
+  font-size: 12px;
+  font-family: Microsoft YaHei-Regular, Microsoft YaHei;
+  color: #FFFFFF;
+}
+.public-el-submit-btn{
+  width: 92px;
+  height: 34px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 12px;
+  font-family: Microsoft YaHei-Regular, Microsoft YaHei;
+  font-weight: 400;
+}
+.el-button--danger{
+  background-color: #FF7575;
+}
+.el-button--danger:hover,
+.el-button--danger:focus{
+  background-color: #ff9b9b;
+}
+// 每个页面搜索栏中单独的下拉框公共样式
+.public-select-box {
+  width: 112px;
+  height: 34px;
+  margin: 20px 25px 20px 15px;
+  border-radius: 4px;
+  box-sizing: border-box;
+
+  .el-input__inner {
+    height: 34px;
+    line-height: 34px;
+  }
+  .el-select-dropdown__item span {
+    font-size: 12px;
+  }
+
+  .el-select-dropdown__empty {
+    font-size: 12px !important;
+  }
+  .el-cascader {
+    line-height: 0px !important;
+  }
+}
+//  复合型输入框搜索按钮
+.search-select-input{
+  .el-input-group__append button.el-button {
+    background-color: #1890FF;
+    border-color: #1890FF;
+    color: #fff;
+  }
+  .el-input-group__append {
+    border-color: #1890FF;
+    overflow: hidden;
+  }
+  .el-button {
+    line-height: unset;
+  }
+  .el-input-group__prepend .el-input {
+    font-size: 12px;
+  }
+  .el-input {
+    width: 110px;
+  }
+  .el-input__icon {
+    line-height: 34px;
+  }
+}
+
  //复合型输入框 当输入框选中时,显示前面下拉框边框样式
 .search-select-input:has(>.el-input__inner:focus){
   .el-input-group__prepend{
