更新“发布商品模块”

--- a/src/iconfont/iconfont.css
+++ b/src/iconfont/iconfont.css
@@ -12,6 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-iconzhengli_gengduo:before {
+  content: "\e650";
+}
+
 .icon-tianjia:before {
   content: "\e622";
 }
