新添加【招聘管理】功能

--- a/src/iconfont/iconfont.css
+++ b/src/iconfont/iconfont.css
@@ -12,6 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-zhaopin:before {
+  content: "\e647";
+}
 .icon-iconzhengli_gengduo:before {
   content: "\e650";
 }
