--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -179,7 +179,7 @@
         padding: 0 !important;
 
         .svg-icon {
-          margin-left: 20px;
+          // margin-left: 20px;
         }
 
         .sub-el-icon {
