--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -236,7 +236,9 @@ li {
   margin: 20px 25px 20px 15px;
   border-radius: 4px;
   box-sizing: border-box;
-
+  // .el-select > .el-input {
+  //         width: 100%;
+  //       }
   .el-input__inner {
     height: 34px;
     line-height: 34px;
@@ -254,6 +256,7 @@ li {
 }
 //  复合型输入框搜索按钮
 .my-search-input,
+.input-button-search,
 .search-select-input{
   .el-input-group__append button.el-button {
     background-color: #1890FF;
@@ -282,6 +285,7 @@ li {
 }
 
  //复合型输入框 当输入框选中时,显示前面下拉框边框样式
+ .input-button-search:has(>.el-input__inner:focus)
 .search-select-input:has(>.el-input__inner:focus){
   .el-input-group__prepend{
     border-color: #1890FF;
